2009-02-03 John Wu <John.Wu at ACM.org>
	* src/table.h: move two inlined functions ibis::table::groupby and
	ibis::table::orderby to mensa.cpp to make the header file more
	self contained.  Those two function requires
	ibis::table::parseNames, which is already in mensa.cpp, change
	parseNames to be class function
	* src/whereLexer.ll: change a number sequence to require at least
	three numbers, change {WS}* after the first string in the
	definition of string sequence to be {SEP}+ -- to address a problem
	reported by David Marks <marksdb at cox.net>
	* src/whereParser.yy: add special cases for IN predicate with one-
	and two-number sequences on the right-hand side
	* tests/Makefile.am, win/MinGW.mak: change case 2 of check-ibis to
	test for a simplified version of problem reported to cause problem
	for David Mark
	* src/qExpr.cpp: in math::stdFunction1::reduce, add special case
	to absorb pairs of consecutive log and exp functions

2009-02-02 John Wu <John.Wu at ACM.org>
	* src/parth3d.cpp: add macro FASTBIT_EXPAND_ALL_TYPES to control
	whether the BYTE, UBYTE, SHORT, USHORT and ULONG are handled
	separately with different template instances.  If
	FASTBIT_EXPAND_ALL_TYPES is defined, all ten fixed-size column
	types are expanded to have their own instances of the template
	functions.  However, with three levels of expansion, it creates
	thousands of instances of the template function and takes a very
	long time to compile.  If the macro is not defined, the default
	behavior, only five template instances are created at each level.
	Overall, this should reduce the number of template instances by a
	factor eight.  Should improve the compile time without sacrifice
	too much run-time performance.
	* src/parth3da.cpp, src/parth3db.cpp: split the two get3DBins
	functions from src/parth3d.cpp to reduce compilation time
	* tests/Makefile.am: remove 2>&1, it somehow cause errors on
	cygwin during 'make check'
	* configure.ac: move the block for handling --enable-debug and